# adoc

./: Cargo.toml  README.md  out.stacks
inputs/: day19syn.txt
src/: main.rs  p1.rs  p10.rs  p11.rs  p12.rs  p13.rs  p14.rs  p15.rs  p16.rs  p16_take2.rs  p17.rs  p18.rs  p19.rs  p2.rs  p20.rs  p21.rs  p22.rs  p22cc.rs  p23.rs  p24.rs  p3.rs  p3radix.rs  p4.rs  p5.rs  p6.rs  p7.rs  p8.rs  p9.rs  scratch.rs
