[package]
name = "adoc"
version = "0.1.0"
#edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
nom = "7.1.0"
rustc-hash = "1.1.0"
rayon = "1.5.1"
cached = "0.26.2"
maplit = "1.0.2"

[profile.release]
debug = true
panic = "abort"